--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "request": "^2.72.0",
     "request-promise": "^3.0.0",
     "serve-favicon": "^2.3.0",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "bower": "^1.5.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
