--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "./node_modules/.bin/mocha ./test/**/*.js",
     "eslint": "./node_modules/.bin/eslint .",
     "apidoc": "apidoc -i controllers/ -o public/apidoc",
-    "postinstall": "bower install"
+    "postinstall": "bower prune"
   },
   "apidoc": {
     "name": "pos dashboard apis Documentation",
