--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,6 @@
   "name": "dashboard",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.5.0",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
     "bootstrap-sass-official": "~3.1.1",
@@ -24,7 +23,7 @@
     "angularjs-slider": "^4.0.2",
     "ngToast": "ngtoast#^2.0.0",
     "angular-animate": "^1.5.7",
-    "ng-csv": "^0.3.6"
+    "ng-csv": "^0.3.6",
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
@@ -33,7 +32,7 @@
     "moment": "^2.13.0",
     "bootstrap-daterangepicker": "^2.1.21",
     "angular-bootstrap": "^1.3.3",
-    "angular": "1.5.7",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "angular":"1.5.7"
   }
 }
