--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "angularjs-slider": "^4.0.2",
     "ngToast": "ngtoast#^2.0.0",
     "angular-animate": "^1.5.7",
-    "ng-csv": "^0.3.6",
+    "ng-csv": "^0.3.6"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
@@ -33,6 +33,6 @@
     "bootstrap-daterangepicker": "^2.1.21",
     "angular-bootstrap": "^1.3.3",
     "bootstrap": "~3.1.1",
-    "angular":"1.5.7"
+    "angular": "1.5.7"
   }
 }
